--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -2,9 +2,9 @@ name: Build WAM
 
 on:
   workflow_dispatch
-  # push:
-  #   tags:
-  #     - "v*"
+  push:
+    tags:
+      - "v*"
 
 env:
   PROJECT_NAME: TemplateProject
