--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -145,5 +145,5 @@ jobs:
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }}
         asset_path: ${{env.PROJECT_NAME}}/${{matrix.build_dir}}/out/${{ steps.win_archivename_step.outputs.archive_name }}.zip
-        asset_name: ${{ steps.build_win_step.outputs.archive_name }}.zip
+        asset_name: ${{ steps.win_archivename_step.outputs.archive_name }}.zip
         asset_content_type: application/zip
