--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -1,10 +1,10 @@
 name: Build WAM
 
 on:
-  #workflow_dispatch
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch
+#   push:
+#     tags:
+#       - "v*"
 
 env:
   PROJECT_NAME: TemplateProject
