Adjust iOS project for archiving

--- a/TemplateProject/projects/TemplateProject-iOS.xcodeproj/xcshareddata/xcschemes/iOS-APP with AUv3.xcscheme
+++ b/TemplateProject/projects/TemplateProject-iOS.xcodeproj/xcshareddata/xcschemes/iOS-APP with AUv3.xcscheme
@@ -84,6 +84,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "TemplateProject"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
