TemplateProject uses iPlug2OOS common props

--- a/TemplateProject/config/TemplateProject-ios.xcconfig
+++ b/TemplateProject/config/TemplateProject-ios.xcconfig
@@ -5,7 +5,7 @@
 
 IPLUG2_ROOT = ../../iPlug2
 
-#include "../../iPlug2/common-ios.xcconfig"
+#include "../../common-ios.xcconfig"
 
 //------------------------------
 // Global build settings
