--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -1,8 +1,8 @@
 name: Build Native
 
 on:
-  workflow_dispatch
-  # push:
+  # workflow_dispatch
+  push:
     # tags:
     #   - "v*"
 
@@ -51,7 +51,7 @@ jobs:
 
     - name: Add msbuild to PATH (Windows)
       if: matrix.os == 'windows-latest'
-      uses: microsoft/setup-msbuild@v1.0.0
+      uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build Windows
       if: matrix.os == 'windows-latest'
