--- a/TemplateProject/resources/TemplateProject-iOS-AUv3-Info.plist
+++ b/TemplateProject/resources/TemplateProject-iOS-AUv3-Info.plist
@@ -47,7 +47,7 @@
 						<string>size:{1024,768}</string>
 					</array>
 					<key>type</key>
-					<string>aumf</string>
+					<string>aufx</string>
 					<key>version</key>
 					<integer>0</integer>
 				</dict>
