--- a/TemplateProject/resources/TemplateProject-macOS-AUv3-Info.plist
+++ b/TemplateProject/resources/TemplateProject-macOS-AUv3-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>TemplateProject</string>
 	<key>CFBundleGetInfoString</key>
-	<string>TemplateProject v0.0.0 Copyright 2020 Acme Inc</string>
+	<string>TemplateProject v0.0.0 Copyright 2021 Acme Inc</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.AcmeInc.app.TemplateProject.AUv3</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -46,7 +46,7 @@
 						<string>Effects</string>
 					</array>
 					<key>type</key>
-					<string>aumf</string>
+					<string>aufx</string>
 					<key>version</key>
 					<integer>0</integer>
 				</dict>
