--- a/TemplateProject/projects/TemplateProject-iOS.xcodeproj/xcshareddata/xcschemes/iOS-AUv3Framework.xcscheme
+++ b/TemplateProject/projects/TemplateProject-iOS.xcodeproj/xcshareddata/xcschemes/iOS-AUv3Framework.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
+   LastUpgradeVersion = "1320"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4FA61F6D22E899B500A92C58"
-               BuildableName = "AUv3Framework.framework"
-               BlueprintName = "AUv3Framework"
+               BuildableName = "TemplateProjectAU.framework"
+               BlueprintName = "TemplateProjectAU"
                ReferencedContainer = "container:TemplateProject-iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,8 +44,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4FA61F6D22E899B500A92C58"
-            BuildableName = "AUv3Framework.framework"
-            BlueprintName = "AUv3Framework"
+            BuildableName = "TemplateProjectAU.framework"
+            BlueprintName = "TemplateProjectAU"
             ReferencedContainer = "container:TemplateProject-iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -60,8 +60,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4FA61F6D22E899B500A92C58"
-            BuildableName = "AUv3Framework.framework"
-            BlueprintName = "AUv3Framework"
+            BuildableName = "TemplateProjectAU.framework"
+            BlueprintName = "TemplateProjectAU"
             ReferencedContainer = "container:TemplateProject-iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
