--- a/TemplateProject/resources/TemplateProject-macOS-AUv3Framework-Info.plist
+++ b/TemplateProject/resources/TemplateProject-macOS-AUv3Framework-Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>AUv3Framework</string>
+	<string>TemplateProjectAU</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.AcmeInc.app.TemplateProject.AUv3Framework</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>AUv3Framework</string>
+	<string>TemplateProjectAU</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
