REAPER64 -> REAPER.app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         //     "name": "(lldb) Launch Reaper VST2",
         //     "type": "lldb",
         //     "request": "launch",
-        //     "program": "/Applications/REAPER64.app",
+        //     "program": "/Applications/REAPER.app",
         //     "args": ["${workspaceFolder}/TemplateProject/TemplateProject.RPP"],
         //     "preLaunchTask": "build VST2 Debug",
         // },
@@ -13,7 +13,7 @@
         //     "name": "(lldb) Launch Reaper VST3",
         //     "type": "lldb",
         //     "request": "launch",
-        //     "program": "/Applications/REAPER64.app",
+        //     "program": "/Applications/REAPER.app",
         //     "args": ["${workspaceFolder}/TemplateProject/TemplateProject.RPP"],
         //     "preLaunchTask": "build VST3 Debug",
         // },
@@ -21,7 +21,7 @@
         //     "name": "(lldb) Launch Reaper AUv2",
         //     "type": "lldb",
         //     "request": "launch",
-        //     "program": "/Applications/REAPER64.app",
+        //     "program": "/Applications/REAPER.app",
         //     "args": ["${workspaceFolder}/TemplateProject/TemplateProject.RPP"],
         //     "preLaunchTask": "build AUv2 Debug",
         // },
