--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -23,13 +23,13 @@ jobs:
           persist-credentials: false
 
       - name: setup python3
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
           architecture: 'x64'
 
       - name: Setup Emscripten
-        uses: mymindstorm/setup-emsdk@v7
+      - uses: mymindstorm/setup-emsdk@v11
         with:
           actions-cache-folder: 'emsdk'
 
@@ -56,7 +56,7 @@ jobs:
           path: ${{env.PROJECT_NAME}}/build-web
 
       - name: Publish to pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           BASE_BRANCH: master
