Add VST_SDK step

--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -57,6 +57,16 @@ jobs:
         cd iPlug2/Dependencies/IPlug
         ./download-vst3-sdk.sh ${{env.VST3_VER}} build-validator
 
+    - name: Get VST2 SDK
+      shell: bash
+      env:
+        VST2_SDK: ${{secrets.VST2_SDK}}
+      run: |
+        mkdir tmp
+        echo $VST2_SDK | base64 -d > tmp/tmp.zip
+        unzip tmp/tmp.zip -d tmp
+        mv tmp/VST2_SDK/* iPlug2/Dependencies/IPlug/VST2_SDK
+
     - name: Build
       shell: bash
       run: |
