--- a/TemplateProject/resources/TemplateProject-iOS-AUv3-Info.plist
+++ b/TemplateProject/resources/TemplateProject-iOS-AUv3-Info.plist
@@ -43,11 +43,11 @@
 					<string>9c0G</string>
 					<key>tags</key>
 					<array>
-						<string>Effects</string>
+						<string>Synth</string>
 						<string>size:{1024,768}</string>
 					</array>
 					<key>type</key>
-					<string>aufx</string>
+					<string>aumu</string>
 					<key>version</key>
 					<integer>0</integer>
 				</dict>
