WIP: Adapt TemplateProject for Webview

--- a/common-mac.xcconfig
+++ b/common-mac.xcconfig
@@ -17,7 +17,7 @@ CLANG_WARN_DOCUMENTATION_COMMENTS = NO
 CLANG_ENABLE_OBJC_WEAK = YES
 
 // the minimum OS to support
-MACOSX_DEPLOYMENT_TARGET = 10.13
+MACOSX_DEPLOYMENT_TARGET = 10.15
 
 SHARED_PRECOMPS_DIR = $(TARGET_BUILD_DIR)/PCH
 
@@ -83,7 +83,7 @@ CLAP_SDK = $(DEPS_PATH)/IPlug/CLAP_SDK
 CLAP_HELPERS = $(DEPS_PATH)/IPlug/CLAP_HELPERS
 
 // this build setting is included at the xcode project level, since we need all these include paths
-IPLUG_INC_PATHS = $(PROJECT_ROOT) $(WDL_PATH) $(SWELL_PATH) $(SWELL_FOR_IPLUG_PATH) $(IPLUG_PATH) $(EXTRAS_INC_PATHS)
+IPLUG_INC_PATHS = $(PROJECT_ROOT) $(WDL_PATH) $(SWELL_PATH) $(SWELL_FOR_IPLUG_PATH) $(IPLUG_PATH) $(EXTRAS_INC_PATHS) $(CHOC_INC_PATHS)
 
 CLAP_INC_PATHS = $(CLAP_SDK)/include $(CLAP_HELPERS)/include/clap/helpers
 
