--- a/TemplateProject/config/TemplateProject-ios.xcconfig
+++ b/TemplateProject/config/TemplateProject-ios.xcconfig
@@ -15,14 +15,14 @@ BINARY_NAME = TemplateProject
 
 // ------------------------------
 // HEADER AND LIBRARY SEARCH PATHS
-EXTRA_INC_PATHS = $(IGRAPHICS_INC_PATHS)
-EXTRA_LIB_PATHS = $(IGRAPHICS_LIB_PATHS)
-EXTRA_LNK_FLAGS = -framework Metal -framework MetalKit //$(IGRAPHICS_LNK_FLAGS)
+EXTRA_INC_PATHS =
+EXTRA_LIB_PATHS =
+EXTRA_LNK_FLAGS = -framework WebKit
 
 //------------------------------
 // PREPROCESSOR MACROS
 
-EXTRA_ALL_DEFS = OBJC_PREFIX=vTemplateProject IGRAPHICS_NANOVG IGRAPHICS_METAL SAMPLE_TYPE_FLOAT
+EXTRA_ALL_DEFS = OBJC_PREFIX=vTemplateProject SAMPLE_TYPE_FLOAT NO_IGRAPHICS WEBVIEW_EDITOR_DELEGATE IDLE_TIMER_RATE=50
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
