--- a/common-win.props
+++ b/common-win.props
@@ -25,6 +25,7 @@
     <STB_PATH>$(IGRAPHICS_DEPS_PATH)\STB</STB_PATH>
     <FAUST_INC_PATHS>$(DEPS_PATH)\Build\win\Faust\include</FAUST_INC_PATHS>
     <STATIC_LIBS_PATH>$(DEPS_PATH)\Build\win\$(Platform)\$(Configuration)</STATIC_LIBS_PATH>
+    <ICUDAT_PATH>$(DEPS_PATH)\Build\win\bin\icudtl.dat</ICUDAT_PATH>
     <IMGUI_INC_PATHS>$(IGRAPHICS_DEPS_PATH)\imgui;$(IGRAPHICS_DEPS_PATH)\imgui\backends</IMGUI_INC_PATHS>
     <YOGA_INC_PATHS>$(IGRAPHICS_DEPS_PATH)\yoga;$(IGRAPHICS_DEPS_PATH)\yoga\yoga</YOGA_INC_PATHS>
     <IGRAPHICS_INC_PATHS>$(IGRAPHICS_PATH);$(IGRAPHICS_PATH)\Controls;$(IGRAPHICS_PATH)\Drawing;$(IGRAPHICS_PATH)\Platforms;$(IGRAPHICS_PATH)\Extras;$(NANOSVG_PATH);$(NANOVG_PATH);$(PNG_PATH);$(ZLIB_PATH);$(FREETYPE_PATH);$(STB_PATH);$(IMGUI_INC_PATHS);$(SKIA_INC_PATHS);$(YOGA_INC_PATHS)</IGRAPHICS_INC_PATHS>
@@ -162,6 +163,9 @@
     </BuildMacro>
     <BuildMacro Include="STATIC_LIBS_PATH">
       <Value>$(STATIC_LIBS_PATH)</Value>
+    </BuildMacro>
+    <BuildMacro Include="ICUDAT_PATH">
+      <Value>$(ICUDAT_PATH)</Value>
     </BuildMacro>
     <BuildMacro Include="IMGUI_INC_PATHS">
       <Value>$(IMGUI_INC_PATHS)</Value>
