--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,8 +8,7 @@
             "ms-vscode.cpptools",
             "ms-python.python",
             "ms-vscode.cmake-tools",
-            "cschlosser.doxdocgen",
-            "hellbent.vscode-faust"
+            "cschlosser.doxdocgen"
         ],
         "codespaces": {
             "repositories": {
