Update Copyright Year

--- a/TemplateProject/projects/TemplateProject-macOS.xcodeproj/xcshareddata/xcschemes/macOS-CLAP.xcscheme
+++ b/TemplateProject/projects/TemplateProject-macOS.xcodeproj/xcshareddata/xcschemes/macOS-CLAP.xcscheme
@@ -42,6 +42,11 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.cockos.reaper"
+         RemotePath = "/Applications/REAPER.app">
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
