--- a/common-mac.xcconfig
+++ b/common-mac.xcconfig
@@ -69,19 +69,10 @@ RTAUDIO_PATH = $(DEPS_PATH)/IPlug/RTAudio
 RTMIDI_PATH = $(DEPS_PATH)/IPlug/RTMidi
 
 EXTRAS_PATH = $(IPLUG_PATH)/Extras
-IMGUI_PATH = $(DEPS_PATH)/IGraphics/imgui
-
-//faust is linked as a dynamic library
-FAUST_LIB_PATHS = $(BUILT_LIBS_LIB_PATH)
-FAUST_INC_PATHS = $(BUILT_LIBS_INC_PATH)
-FAUST_LNK_FLAGS = $(BUILT_LIBS_LIB_PATH)/libfaust.dylib
-
-CIVETWEB_INC_PATHS = $(BUILT_LIBS_INC_PATH)
-CIVETWEB_LNK_FLAGS = $(BUILT_LIBS_LIB_PATH)/libcivetweb.a
 
 JSON_INC_PATH = $(DEPS_PATH)/Extras/nlohmann
 
-EXTRAS_INC_PATHS = $(EXTRAS_PATH) $(EXTRAS_PATH)/Synth $(EXTRAS_PATH)/Faust $(EXTRAS_PATH)/OSC $(EXTRAS_PATH)/HIIR $(EXTRAS_PATH)/WebSocket $(CIVETWEB_INC_PATHS) $(JSON11_PATH) $(RTAUDIO_PATH) $(RTMIDI_PATH) $(JSON_INC_PATH)
+EXTRAS_INC_PATHS = $(EXTRAS_PATH) $(EXTRAS_PATH)/Synth $(EXTRAS_PATH)/OSC $(EXTRAS_PATH)/HIIR $(JSON11_PATH) $(RTAUDIO_PATH) $(RTMIDI_PATH) $(JSON_INC_PATH)
 
 // Plug-in SDK paths
 VST2_SDK = $(DEPS_PATH)/IPlug/VST2_SDK
@@ -94,7 +85,7 @@ CLAP_HELPERS = $(DEPS_PATH)/IPlug/CLAP_HELPERS
 // this build setting is included at the xcode project level, since we need all these include paths
 IPLUG_INC_PATHS = $(PROJECT_ROOT) $(WDL_PATH) $(SWELL_PATH) $(SWELL_FOR_IPLUG_PATH) $(IPLUG_PATH) $(EXTRAS_INC_PATHS)
 
-CLAP_INC_PATHS = $(CLAP_SDK)/include $(CLAP_HELPERS)/include/clap/helpers
+CLAP_INC_PATHS = $(IPLUG_PATH)/CLAP $(CLAP_SDK)/include $(CLAP_HELPERS)/include/clap/helpers
 
 IGRAPHICS_PATH = $(IPLUG2_ROOT)/IGraphics
 
