--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -7,7 +7,7 @@ on:
 #       - "v*"
 
 env:
-  PROJECT_NAME: Rend
+  PROJECT_NAME: TemplateProject
   URL: https://${{github.repository_owner}}.github.io/${{github.event.repository.name}}/
 
 jobs:
